<resources>
    <string name="app_name">ArAccessories</string>
    <string name="title_activity_face_landmarks">FaceLandmarksActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="makeup">Makeup tutorial</string>
    <string name="glasses">Glasses tutorial</string>
    <string name="regions">Quiz tutorial</string>
    <string name="face_landmarks">Face landmarks</string>
    <string name="quiz_title">What animal are you?</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="App_Name">Accessorize</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="welcome_to_app_name">Welcome to Accessorzie</string>
    <string name="the_future_of_e_commerce">The Future of e-commerce</string>
    <string name="login_to_your_naccount">Login to your\nAccount</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="or_continue_with">or continue with</string>
    <string name="todo">TODO</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_your_naccount">Create your\nAccount</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="fill_your_profile">Fill Your Profile</string>
    <string name="full_name">Full Name</string>
    <string name="nickname">Nickname</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="_1066324579">1066324579</string>
    <string name="edit">edit</string>
    <string name="continue_">Continue</string>
    <string name="title_activity_augmented_image">AugmentedImageActivity</string>
    <string name="close">close</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="fav">Fav</string>
    <string name="welcome_ahmed">Welcome Ahmed</string>
    <string name="make_your_first_order_and_enjoy_10_discount">Make Your First Order and Enjoy 10% discount</string>
    <string name="adimage">adImage</string>
    <string name="what_are_you_looking_for">What are you looking for..</string>
    <string name="face_masks">Face Masks</string>
    <string name="productimage">productImage</string>
    <string name="productImage">productImage</string>
    <string name="fox_face_mask">Fox Face Mask</string>
    <string name="_700_egp">700 Egp</string>
    <string name="item_name">Item Name</string>
    <string name="back_button">Back Button</string>
    <string name="description">Description</string>
    <string name="price">1500 EGP</string>
    <string name="share">Share</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="try_on">Try On</string>
    <string name="discover_a_new_you">Discover a new you !</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="glad_to_see_you">Glad to see you</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="phone_number">Phone Number</string>
    <string name="or_sign_up_with_social_account">Or Sign Up with social account</string>
    <string name="remove">Remove</string>
    <string name="delete_item">Delete Item</string>
    <string name="decrease_quantity">Decrease Quantity</string>
    <string name="my_cart">My Cart</string>
    <string name="total_amount">Total Amount</string>
    <string name="_1050_egp">1050 EGP</string>
    <string name="checkout">CHECKOUT</string>
    <string name="_1975_egp">1975 EGP</string>
    <string name="capture_photo">capture photo</string>
    <string name="history">History</string>
    <string name="favourite">Favourite</string>
    <string name="rating">rating</string>
    <string name="type_a_message">Type a message...</string>
    <string name="send">Send</string>
    <string name="bot">Bot</string>
    <string name="this_is_a_sample_message_that_will_appear">This is a sample message that will appear</string>
    <string name="or_login_with_social_account">Or login with social account</string>
    <string name="facebook">facebook</string>
</resources>